# ITKNornir

./: .gitignore  CMakeLists.txt  README.rst  itk-module.cmake  package.json  pnpm-lock.yaml  pyproject.toml
include/: IRAABBox.h  IRFFT.h  IRFFTCommon.h  IRGridCommon.h  IRGridTransform.h  IRLog.h  IRMosaicRefinementCommon.h  IRMutex.h  IROptimizerObserver.h  IRPath.h  IRStdMutex.h  IRStdThread.h  IRStdThreadStorage.h  IRTerminator.h  IRThread.h  IRThreadInterface.h  IRThreadPool.h  IRTransaction.h  IRV3X1P3X1.h  itkGridTransform.h  itkIRCommon.h  itkIRRefineGrid.h  itkIRRefineGrid.hxx  itkIRTerminator.h  itkIRText.h  itkIRUtils.h  itkImageMosaicVarianceMetric.h  itkImageMosaicVarianceMetric.hxx  itkInverseTransform.h  itkLegendrePolynomialTransform.h  itkLegendrePolynomialTransform.hxx  itkMeshTransform.h  itkMinimalStandardRandomVariateGenerator.h  itkNormalizeImageFilterWithMask.h  itkNormalizeImageFilterWithMask.hxx  itkNumericInverse.h  itkRBFTransform.h  itkRadialDistortionTransform.h  itkRadialDistortionTransform.hxx  itkRegularStepGradientDescentOptimizer2.h  (+2 more)
src/: CMakeLists.txt  IRAABBox.cxx  IRFFT.cxx  IRFFTCommon.cxx  IRGridCommon.cxx  IRGridTransform.cxx  IRLog.cxx  IRMosaicRefinementCommon.cxx  IRMutex.cxx  IRMutexInterface.cxx  IRStdMutex.cxx  IRStdThread.cxx  IRTerminator.cxx  IRThread.cxx  IRThreadInterface.cxx  IRThreadPool.cxx  IRThreadStorage.cxx  IRTransaction.cxx  itkIRCommon.cxx  itkIRText.cxx  itkIRUtils.cxx  itkRBFTransform.cxx  itkRegularStepGradientDescentOptimizer2.cxx
test/: CMakeLists.txt  (+1 more)
wasm/: CMakeLists.txt  ir-refine-grid.cxx
(+4 files in other folders)
